chore(deps): add Prettier

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "pnpm": "^10.5.2"
+    "pnpm": "^10.5.2",
+    "prettier": "^3.5.3"
   },
   "dependencies": {
     "primevue": "^4.3.1",
