--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -22,6 +22,7 @@
     "@storybook/test": "^8.6.3",
     "@storybook/vue3": "^8.6.3",
     "@storybook/vue3-vite": "^8.6.3",
+    "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
