--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,8 +11,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "vue": "^3.5.13",
-    "theme": "workspace:*"
+    "theme": "workspace:*",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
@@ -23,6 +23,7 @@
     "@storybook/test": "^8.6.3",
     "@storybook/vue3": "^8.6.3",
     "@storybook/vue3-vite": "^8.6.3",
+    "@tailwindcss/vite": "^4.0.9",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/browser": "^3.0.7",
