--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "theme",
+  "name": "@digital-agency-design-system-with-primevue/theme",
   "version": "0.1.0",
   "description": "",
   "private": true,
