--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "components",
+  "name": "@digital-agency-design-system-with-primevue/components",
   "version": "0.1.0",
   "description": "",
   "private": true,
