feat: add package exports for design tokens and preflight

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "",
   "private": true,
+  "exports": {
+    "./design-tokens": "./design-tokens.css",
+    "./preflight": "./preflight.css"
+  },
   "scripts": {},
   "keywords": [
     "tailwindcss"
