--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "",
   "private": true,
+  "main": "src/index.ts",
   "scripts": {},
   "keywords": [],
   "author": "",
