--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -8,10 +8,12 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "primevue": "^4.3.1"
+  },
   "devDependencies": {
     "vue": "^3.5.13"
   },
   "peerDependencies": {
     "vue": "^3.5.13"
-  }
-}
+  }}
