--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -12,8 +12,11 @@
     "primevue": "^4.3.1"
   },
   "devDependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "tailwindcss": "^4.0.9"
   },
   "peerDependencies": {
-    "vue": "^3.5.13"
-  }}
+    "vue": "^3.5.13",
+    "tailwindcss":  "^4.0.9"
+  }
+}
