--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "clsx": "^2.1.1",
     "primevue": "^4.3.1"
   },
   "devDependencies": {
