--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,12 +11,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@digital-agency-design-system-with-primevue/theme": "workspace:*",
     "@digital-agency-design-system-with-primevue/components": "workspace:*",
+    "@digital-agency-design-system-with-primevue/theme": "workspace:*",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
+    "@storybook/addon-actions": "^8.6.3",
     "@storybook/addon-essentials": "^8.6.3",
     "@storybook/addon-onboarding": "^8.6.3",
     "@storybook/blocks": "^8.6.3",
