--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "private": true,
   "main": "src/index.ts",
+  "exports": {
+    "./button": "./src/Button/index.ts",
+    "./input-text": "./src/InputText/index.ts",
+    "./select": "./src/Select/index.ts"
+  },
   "scripts": {},
   "keywords": [],
   "author": "",
@@ -13,11 +18,11 @@
     "primevue": "^4.3.1"
   },
   "devDependencies": {
-    "vue": "^3.5.13",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "vue": "^3.5.13"
   },
   "peerDependencies": {
-    "vue": "^3.5.13",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "vue": "^3.5.13"
   }
 }
