--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
+    "@iconify-json/mdi": "^1.2.3",
     "@storybook/addon-a11y": "^8.6.4",
     "@storybook/addon-actions": "^8.6.3",
     "@storybook/addon-essentials": "^8.6.3",
