--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -37,6 +37,7 @@
     "storybook": "^8.6.3",
     "typescript": "^5.8.2",
     "unplugin-icons": "^22.1.0",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.0",
     "vitest": "^3.0.7",
     "vue-tsc": "^2.2.8"
