--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
     "@vue/tsconfig": "^0.7.0",
