--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,7 +7,8 @@
   "exports": {
     "./button": "./src/Button/index.ts",
     "./input-text": "./src/InputText/index.ts",
-    "./select": "./src/Select/index.ts"
+    "./select": "./src/Select/index.ts",
+    "./icon": "./src/Icon/index.ts"
   },
   "scripts": {},
   "keywords": [],
