--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -40,6 +40,7 @@
     "unplugin-icons": "^22.1.0",
     "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.0",
+    "vite-plugin-inspect": "^11.0.0",
     "vite-svg-loader": "^5.1.0",
     "vitest": "^3.0.7",
     "vue-tsc": "^2.2.8"
