--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
+    "@vue/compiler-sfc": "^3.5.13",
     "@vue/tsconfig": "^0.7.0",
     "playwright": "^1.50.1",
     "storybook": "^8.6.6",
