--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -37,6 +37,7 @@
     "@vue/tsconfig": "^0.7.0",
     "playwright": "^1.50.1",
     "storybook": "^8.6.6",
+    "svgo": "^3.3.2",
     "typescript": "^5.8.2",
     "unplugin-icons": "^22.1.0",
     "unplugin-vue-components": "^28.4.1",
