--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-onboarding": "^8.6.6",
     "@storybook/blocks": "^8.6.6",
     "@storybook/experimental-addon-test": "^8.6.6",
+    "@storybook/preview-api": "^8.6.7",
     "@storybook/test": "^8.6.6",
     "@storybook/vue3": "^8.6.6",
     "@storybook/vue3-vite": "^8.6.6",
