--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -21,6 +21,7 @@
     "@storybook/addon-a11y": "^8.6.6",
     "@storybook/addon-actions": "^8.6.6",
     "@storybook/addon-essentials": "^8.6.6",
+    "@storybook/addon-interactions": "^8.6.7",
     "@storybook/addon-onboarding": "^8.6.6",
     "@storybook/blocks": "^8.6.6",
     "@storybook/experimental-addon-test": "^8.6.6",
