--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -24,8 +24,10 @@
     "@storybook/addon-onboarding": "^8.6.7",
     "@storybook/blocks": "^8.6.7",
     "@storybook/experimental-addon-test": "^8.6.7",
+    "@storybook/manager-api": "^8.6.7",
     "@storybook/preview-api": "^8.6.7",
     "@storybook/test": "^8.6.7",
+    "@storybook/theming": "^8.6.7",
     "@storybook/vue3": "^8.6.7",
     "@storybook/vue3-vite": "^8.6.7",
     "@tailwindcss/vite": "^4.0.9",
