--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -39,6 +39,7 @@
     "@vue/compiler-sfc": "^3.5.13",
     "@vue/tsconfig": "^0.7.0",
     "playwright": "^1.50.1",
+    "remark-gfm": "^4.0.1",
     "storybook": "^8.6.7",
     "svgo": "^3.3.2",
     "typescript": "^5.8.2",
