--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -21,6 +21,7 @@
     "@storybook/addon-a11y": "^8.6.7",
     "@storybook/addon-actions": "^8.6.7",
     "@storybook/addon-essentials": "^8.6.7",
+    "@storybook/addon-mdx-gfm": "^8.6.7",
     "@storybook/addon-onboarding": "^8.6.7",
     "@storybook/blocks": "^8.6.7",
     "@storybook/experimental-addon-test": "^8.6.7",
