feat: add PasswordInput

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,7 +10,8 @@
     "./select": "./src/components/Select/index.ts",
     "./icon": "./src/components/Icon/index.ts",
     "./checkbox": "./src/components/Checkbox/index.ts",
-    "./textarea": "./src/components/Textarea/index.ts"
+    "./textarea": "./src/components/Textarea/index.ts",
+    "./password-input": "./src/components/PasswordInput/index.ts"
   },
   "scripts": {},
   "keywords": [],
