--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -13,19 +13,46 @@
     "./textarea": "./src/components/Textarea/index.ts",
     "./password-input": "./src/components/PasswordInput/index.ts"
   },
-  "scripts": {},
+  "scripts": {
+    "storybook": "storybook dev -p 6006 -c ./src/storybook",
+    "sb": "pnpm run storybook"
+  },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "clsx": "^2.1.1",
-    "primevue": "^4.3.1"
+    "primevue": "^4.3.3"
   },
   "devDependencies": {
-    "tailwindcss": "^4.0.9",
+    "@storybook/addon-a11y": "^8.6.12",
+    "@storybook/addon-actions": "^8.6.12",
+    "@storybook/addon-controls": "^8.6.12",
+    "@storybook/addon-docs": "^8.6.12",
+    "@storybook/addon-measure": "^8.6.12",
+    "@storybook/addon-outline": "^8.6.12",
+    "@storybook/addon-storysource": "^8.6.12",
+    "@storybook/experimental-addon-test": "^8.6.12",
+    "@storybook/manager-api": "^8.6.12",
+    "@storybook/preview-api": "^8.6.12",
+    "@storybook/test": "^8.6.12",
+    "@storybook/theming": "^8.6.12",
+    "@storybook/vue3": "^8.6.12",
+    "@storybook/vue3-vite": "^8.6.12",
+    "@tailwindcss/vite": "^4.1.2",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/browser": "^3.1.1",
+    "@vitest/coverage-v8": "^3.1.1",
+    "@vue/compiler-sfc": "^3.5.13",
+    "storybook": "^8.6.12",
+    "svgo": "^3.3.2",
+    "tailwindcss": "^4.1.2",
+    "vite": "^6.2.5",
+    "vitest": "^3.1.1",
     "vue": "^3.5.13"
   },
   "peerDependencies": {
+    "@digital-agency-design-system-with-primevue/theme": "workspace:*",
     "tailwindcss": "^4.0.9",
     "vue": "^3.5.13"
   }
