--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,28 +1,4 @@
 {
-  "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "es2024"],
-    "target": "es2024",
-    "module": "preserve",
-    "moduleResolution": "bundler",
-
-    "strict": true,
-    "allowUnusedLabels": false,
-    "allowUnreachableCode": false,
-    "exactOptionalPropertyTypes": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-
-    "isolatedModules": true,
-
-    "checkJs": true,
-
-    "esModuleInterop": true,
-    "skipLibCheck": true
-  },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "files": [],
+  "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }]
 }
