--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@digital-agency-design-system-with-primevue/components": "workspace:*",
     "@digital-agency-design-system-with-primevue/theme": "workspace:*",
+    "tailwindcss": "^4.0.9",
     "vue": "^3.5.13"
   },
   "devDependencies": {
